<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountSettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout_profile_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/profile_settings_toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="6dp"
            android:background="@color/white">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <ImageView
                    android:id="@+id/close_profile_imgview_btn"
                    android:layout_width="20dp"
                    android:layout_height="30dp"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/close" />

                <ImageView
                    android:id="@+id/save_info_profile_imgview_btn"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="15dp"
                    android:src="@drawable/save_edited_info" />
            </RelativeLayout>


        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image_view_acc_settings"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_below="@+id/app_bar_layout_profile_settings"
        android:layout_centerHorizontal="true"

        android:layout_marginTop="15dp"
        android:src="@drawable/profile" />

    <TextView
        android:id="@+id/change_image_txt_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_image_view_acc_settings"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:text="@string/change_image"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/full_name_account_sett"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/change_image_txt_btn"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/full_name"
        android:inputType="text"
        android:textSize="20sp" />


    <EditText

        android:id="@+id/user_name_account_sett"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/full_name_account_sett"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/username"
        android:inputType="text"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/bio_account_sett"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_name_account_sett"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/bio"
        android:inputType="text"
        android:textSize="20sp" />

    <Button
        android:id="@+id/logout_btn_acc_sett"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/delete_btn_acc_sett"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="6dp"
        android:background="@drawable/buttons_background"
        android:text="@string/log_out"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/delete_btn_acc_sett"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="6dp"
        android:background="@color/colorPrimary"
        android:text="@string/delete_account"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp" />


</RelativeLayout>