<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_marginStart="100dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="100dp"
    android:background="@drawable/button_black_background">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_profile_image_search"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:src="@drawable/profile" />

        <TextView
            android:id="@+id/user_name_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_profile_image_search"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/user_name"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/user_full_name_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_name_search"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:text="@string/full_name"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_black_background"
            android:text="@string/follow"
            android:layout_margin="10dp"
            android:id="@+id/follow_btn_search"
            android:textAllCaps="false"
            android:layout_below="@id/user_full_name_search"/>

    </RelativeLayout>

</RelativeLayout>