<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/profile_toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="6dp"
            android:background="@color/white">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/profile_fragment_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:maxLines="1"
                    android:text="@string/username"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/options_view"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/options" />
            </RelativeLayout>


        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_bar_layout_profile">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/top_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/pro_image_profile_frag"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/profile" />

                <LinearLayout
                    android:layout_width="190dp"
                    android:layout_height="90dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:paddingStart="5dp"
                            android:paddingEnd="5dp">

                            <TextView
                                android:id="@+id/total_posts"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="0"
                                android:textColor="@color/black"
                                android:textSize="12sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/posts"
                                android:textColor="@color/black"
                                android:textSize="12sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:paddingStart="5dp"
                            android:paddingEnd="5dp">

                            <TextView
                                android:id="@+id/total_followers"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="0"
                                android:textColor="@color/black"
                                android:textSize="12sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/followers"
                                android:textColor="@color/black"
                                android:textSize="12sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:paddingStart="5dp"
                            android:paddingEnd="5dp">

                            <TextView
                                android:id="@+id/total_following"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="0"
                                android:textColor="@color/black"
                                android:textSize="12sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/following"
                                android:textColor="@color/black"
                                android:textSize="12sp"
                                android:textStyle="bold" />

                        </LinearLayout>
                    </LinearLayout>

                    <Button
                        android:id="@+id/edit_account_settings_btn"
                        android:layout_width="170dp"
                        android:layout_height="32dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="2dp"
                        android:background="@drawable/buttons_background"
                        android:backgroundTint="#808080"
                        android:text="@string/edit_profile"
                        android:textAllCaps="false" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/mid_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp">

                <TextView
                    android:id="@+id/full_name_profile_frag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/bio_profile_frag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bio"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/button_black_background"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/images_grid_view_btn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/grid" />

                <ImageButton
                    android:id="@+id/images_save_btn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="1dp"
                    android:layout_height="49dp"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    android:src="@drawable/save_large_icon" />


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>